--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@ it's only your imagination..</p>
                          <div class="team-thumb">
                               <img src="images/team-image3.jpg" class="img-responsive" alt="Jack Wilson">
                               <div class="team-info team-thumb-up">
-                                   <h2>KRISHNA PRASADH</h2>
+                                   <h2>KRISHNAPRASAD</h2>
                                    <small>TEAM MEMBER</small>
-                                   <p>Successful people don’t become that way overnight. What most people see at a glance—happiness, wealth, a great career, purpose—is the result of hard work and hustle over time..</p>
+                                   <p>Successful people donâ€™t become that way overnight. What most people see at a glanceâ€”happiness, wealth, a great career, purposeâ€”is the result of hard work and hustle over time..</p>
                               </div>
                          </div>
                     </div>
