--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <script>
 function validateForm() {
   var x = document.forms["myForm"]["fname"].value;
-  if (x !== "candle") 
+  if (x !== "cicada") 
     alert("WRONG ANSWER");
-   if (x == "candle") {
+   if (x == "cicada") {
 alert("RIGHT ANSWER");
-     window.location = "3.html"
+     window.location = "2.html"
 
-    return false;
+ return false;
   }
 }
 </script>
@@ -92,8 +92,10 @@ alert("RIGHT ANSWER");
                     <div class="col-md-offset-3 col-md-6 col-sm-12">
                          <div class="home-info">
                               <h3>ANSWER THE QUESTION</h3>
-                              <h1> 
-"You measure my life in hours and I serve you by expiring. I'm quick when I'm thin and slow when I'm fat. The wind is my enemy. "</h1>
+                              
+<h1> 
+"I WANT TO CONVEY A LOVE LETTER TO A GIRL IN CSA A THE LETTER CONSIST OF ONLY A WORD" HINT:1ED43123B6BDB196E9F1D
+9C695319B47EAA8CE1</h1>
                               <form name="myForm" action=""  onsubmit="return validateForm()" method="post" class="online-form">
                                    <input type="TEXT" name="fname" class="form-control" placeholder="ANSWER here :all character must be in lower case" required>
 
@@ -183,7 +185,7 @@ it's only your imagination..</p>
                               <div class="team-info team-thumb-up">
                                    <h2>KRISHNA PRASADH</h2>
                                    <small>TEAM MEMBER</small>
-                                   <p>Successful people don’t become that way overnight. What most people see at a glance—happiness, wealth, a great career, purpose—is the result of hard work and hustle over time..</p>
+                                   <p>Successful people donâ€™t become that way overnight. What most people see at a glanceâ€”happiness, wealth, a great career, purposeâ€”is the result of hard work and hustle over time..</p>
                               </div>
                          </div>
                     </div>
