--- a/4.html
+++ b/4.html
@@ -29,7 +29,7 @@ function validateForm() {
   var x = document.forms["myForm"]["fname"].value;
   if (x !== "wordplay") 
     alert("WRONG ANSWER");
-   if (x == "wordplay") {
+   if (x == "heroine") {
 alert("RIGHT ANSWER");
      window.location = "5.html"
 
@@ -186,7 +186,7 @@ it's only your imagination..</p>
                               <div class="team-info team-thumb-up">
                                    <h2>KRISHNA PRASADH</h2>
                                    <small>TEAM MEMBER</small>
-                                   <p>Successful people don’t become that way overnight. What most people see at a glance—happiness, wealth, a great career, purpose—is the result of hard work and hustle over time..</p>
+                                   <p>Successful people donâ€™t become that way overnight. What most people see at a glanceâ€”happiness, wealth, a great career, purposeâ€”is the result of hard work and hustle over time..</p>
                               </div>
                          </div>
                     </div>
