--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@ alert("RIGHT ANSWER");
                          <div class="home-info">
                               <h3>ANSWER THE QUESTION</h3>
                               
-<h3> "I WANT TO CONVEY A LOVE
-	LETTER TO A GIRL IN CSA A 
-	THE LETTER CONSIST OF ONLY 
-	A WORD" HINT:1ED43123B6BDB196E9F1D
+<h3> " Find out the key ?( hint: HEX-BINARY-WORD ) CODE:1ED43123B6BDB196E9F1D
 9C695319B47EAA8CE1</h3>
                               <form name="myForm" action=""  onsubmit="return validateForm()" method="post" class="online-form">
                                    <input type="TEXT" name="fname" class="form-control" placeholder="ANSWER here :all character must be in lower case" required>
