--- a/4.html
+++ b/4.html
@@ -96,7 +96,7 @@ alert("RIGHT ANSWER");
 What word in the English language does the following:
  the first two letters signify a male, the first three letters 
  signify a female, the first four letters signify a great, while the 
- entire world signifies a great woman. What is the word?.- </h1>
+ entire world signifies a great woman. What is the word?. </h1>
                               <form name="myForm" action=""  onsubmit="return validateForm()" method="post" class="online-form">
                                    <input type="TEXT" name="fname" class="form-control" placeholder="ANSWER here :all character must be in lower case" required>
 
