--- a/5.html
+++ b/5.html
@@ -93,7 +93,7 @@ alert("RIGHT ANSWER");
                          <div class="home-info">
                               <h3>ANSWER THE QUESTION</h3>
                               <h1> 
-Which word in the dictionary is always spelled incorrectly? </h1>
+Which word in the dictionary is always spelled incorrectly ? </h1>
                               <form name="myForm" action=""  onsubmit="return validateForm()" method="post" class="online-form">
                                    <input type="TEXT" name="fname" class="form-control" placeholder="ANSWER here :all character must be in lower case" required>
 
@@ -181,7 +181,7 @@ it's only your imagination..</p>
                          <div class="team-thumb">
                               <img src="images/team-image3.jpg" class="img-responsive" alt="Jack Wilson">
                               <div class="team-info team-thumb-up">
-                                   <h2>KRISHNA PRASADH</h2>
+                                   <h2>KRISHNAPRASAD</h2>
                                    <small>TEAM MEMBER</small>
                                    <p>Successful people don’t become that way overnight. What most people see at a glance—happiness, wealth, a great career, purpose—is the result of hard work and hustle over time..</p>
                               </div>
